feat: initial pass on message refactor [BREAKING]